--- a/.gitignore
+++ b/.gitignore
@@ -420,3 +420,14 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# Android Studio
+*.iml
+.idea
+
+#.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
+.gradle
+build/
+.navigation
+captures/
+output.json 
